# TinyRecursiveModels

./: .gitignore  README.md  pretrain.py  pyproject.toml
config/: cfg_pretrain.yaml
config/arch/: trm_patches.yaml
models/recursive_reasoning/: trm.py
papers/: Hierarchical Reasoning Model.html  Less is More_ Recursive Reasoning with Tiny Networks.html
